--- a/website/app/index.html
+++ b/website/app/index.html
@@ -93,9 +93,9 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.2.1/textAngular-sanitize.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.2.1/textAngular.min.js'></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.min.js"></script>
-<script src="http://code.highcharts.com/highcharts.src.js"></script>
 
 <!--
+<script src="http://code.highcharts.com/highcharts.src.js"></script>
 <script src="assets/js/jquery-1.11.2.min.js"></script>
 <script src="assets/js/jquery-ui.min.js"></script>
 <script src="assets/js/handsontable.full.js"></script>
@@ -110,6 +110,7 @@
 <script src="assets/js/angular/restangular.min.js"></script>
 -->
 <!-- build:jsassets js/assets.js -->
+<script src="bower_components/highcharts/highcharts.src.js"></script>
 <script src="assets/js/handsontable.full.js"></script>
 <script src="assets/js/angular/ngHandsontable.js"></script>
 <script src="assets/js/flow.js"></script>
@@ -132,7 +133,7 @@
 <script src="assets/js/socket.io.js"></script>
 <script src="assets/js/angular/angular-toastr.js"></script>
 <script src="assets/js/angular/angular-masonry.js"></script>
-<script src="assets/js/angular/highcharts-ng.min.js"></script>
+<script src="bower_components/highcharts-ng/dist/highcharts-ng.min.js"></script>
 <script src="assets/js/vis.js"></script>
 <script src="assets/js/angular/angular-filter.js"></script>
 <script src="assets/js/moment.min.js"></script>
