--- a/website/app/application/core/projects/project/reviews/reviews.html
+++ b/website/app/application/core/projects/project/reviews/reviews.html
@@ -29,8 +29,9 @@
             <div class="col-xs-3 sidebar-wrapper">
                 <ul class="list-group" style="margin-left: -10px; margin-right: -10px;">
                     <li class="list-group-item">
-                        <span class="pull-right" style="color: gray;"><i  class="fa fa-fw fa-comments-o"></i> 4 </span>
-                        <i class="fa fa-fw fa fa-circle" style="color: green;"></i>abc review   <span style="color: gray; padding-left: 8px;">Fri, Dec19, 2014</span>
+                        <span class="pull-right" style="color: gray;"><i class="fa fa-fw fa-comments-o"></i> 4 </span>
+                        <i class="fa fa-fw fa fa-circle" style="color: green;"></i>abc review <span
+                            style="color: gray; padding-left: 8px;">Fri, Dec19, 2014</span>
                     </li>
                     <li class="list-group-item">
                         <span class="pull-right"><i class="fa fa-fw fa-comments-o"></i> 3 </span>
