--- a/website/app/application/core/projects/project/project-task-bar.html
+++ b/website/app/application/core/projects/project/project-task-bar.html
@@ -4,7 +4,7 @@
             <li class="dropdown">
                 <a  title="{{project.name}}" class="dropdown-toggle" data-toggle="dropdown" style="color: white; padding-left: 5px;">
                     <i class="white fa fa-fw fa-briefcase"></i>
-                    {{project.name | truncate: 14: '...'}} <span class="white badge" style="float: none;">{{projects.length}}</span> <span class="caret"></span>
+                    {{project.name | truncate: 17: '...'}} <span class="white badge" style="float: none;">{{projects.length}}</span> <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu projects-dropdown nav-dropdown-scrollbar" role="menu">
                     <li data-toggle="modal"
@@ -16,7 +16,7 @@
         </ul>
     </div>
     <div class="col-xs-7">
-        <div style="padding-left: 30px;">
+        <div>
             <ul class="taskbar nav nav-tabs" role="tablist">
                 <li role="presentation" ng-class="{'active': activePage === 'home'}"><a
                         ng-class="{'task-item-active-home': activePage === 'home'}"
