--- a/website/app/application/core/projects/project/reviews/reviews.html
+++ b/website/app/application/core/projects/project/reviews/reviews.html
@@ -1,102 +1,52 @@
-<!--<div><br>-->
-<!--<div class="row">-->
-<!--<div class="col-xs-3">-->
-<!--<button class="btn btn-info">Create</button>-->
-<!--</div>-->
-<!--<div class="col-xs-4 pull-right">-->
-<!--<div class="form-group has-feedback">-->
-<!--<input style="padding-left: 35px;" ng-model="search" placeholder="Search Reviews..."-->
-<!--class="form-control">-->
-<!--<span style="left: 0;padding-left: 10px;" class="fa fa-fw fa-search form-control-feedback"></span>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="row" style="border: 1px solid #757575; height: 600px;display: block;">-->
-<!--<div class="row" style="height:50px; background-color: #EFEFEF;border-bottom: 1px solid #d3d3d3">-->
-<!--<div class="col-xs-1" style="padding-top: 12px;color:#757575">-->
-<!--<b><a ng-class="{underline: type === 'all_reviews'}"-->
-<!--ng-click="listReviewsByType('all_reviews')">All Reviews</a></b>-->
-<!--</div>-->
-<!--<div class="col-xs-1" style="padding-top: 12px;color:#757575">-->
-<!--<b><a ng-class="{underline: type === 'my_reviews'}"-->
-<!--ng-click="listReviewsByType('my_reviews')">My Reviews</a></b>-->
-<!--</div>-->
-<!--<div class="col-xs-1" style="padding-top: 12px;color:#757575">-->
-<!--<b><a ng-class="{underline: type === 'closed_reviews'}"-->
-<!--ng-click="listReviewsByType('closed_reviews')">Closed Reviews</a></b>-->
-<!--</div>-->
-<!--</div>-->
-
-<!--<div class="row">-->
-<!--<div class="col-xs-3 sidebar-wrapper">-->
-<!--<ul class="list-group" style="margin-left: -10px; margin-right: -10px;">-->
-<!--<li class="list-group-item pointer"-->
-<!--ng-repeat="each_review in reviews | filter:search | event: project.date: project.nextdate as reviews"-->
-<!--ng-class="{active: review.id === each_review.id}"-->
-<!--ui-sref="projects.project.reviews.edit({'review_id': each_review.id})">-->
-<!--<span class="pull-right" style="color: gray;"><i class="fa fa-fw fa-comments-o"></i>-->
-<!--{{each_review.messages.length}} </span>-->
-<!--<i ng-class="{'fa fa-circle review-open': each_review.status === 'open',-->
-<!--'fa fa-minus-circle review-closed': each_review.status === 'closed'}"></i> {{each_review.title}}<span-->
-<!--style="color: gray; padding-left: 8px;">-->
-<!--{{(each_review.messages[(each_review.messages.length -1)].date)}}</span>-->
-<!--</li>-->
-<!--</ul>-->
-<!--</div>-->
-<!--<div ui-view></div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-  <div>
-
-
-<div class="row">
-    <div class="col-xs-12 details-container">
-        <nav class="navbar navbar-default">
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a>all</a></li>
-                    <li><a class="">My Reviews</a></li>
-                    <li><a class="">Archived</a></li>
-                </ul>
-            </div>
-        </nav>
-    </div>
-
-    <div class="row" style="margin-top: 20px;">
-        <div class="col-xs-4">
-            <div class="details-sidebar">
-                <div class="row">
-                    <div style="text-align: center;margin-top: 20px;">
-                        <button class="btn-review  btn-details-container btn btn-default"> create</button>
-                    </div>
+<div>
+    <div class="row">
+        <div class="col-xs-12 details-container">
+            <nav class="navbar navbar-default">
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a>all</a></li>
+                        <li><a class="">My Reviews</a></li>
+                        <li><a class="">Archived</a></li>
+                    </ul>
                 </div>
-                <ul class="list-group" style="">
-                    <li class="list-group-item pointer"
-                        ng-repeat="each_review in reviews | filter:search | event: project.date: project.nextdate as reviews"
-                        ng-class="{active: review.id === each_review.id}"
-                        ui-sref="projects.project.reviews.edit({'review_id': each_review.id})">
+            </nav>
+        </div>
+
+        <div class="row" style="margin-top: 20px;">
+            <div class="col-xs-4">
+                <div class="details-sidebar">
+                    <div class="row">
+                        <div style="text-align: center;margin-top: 20px;">
+                            <button ui-sref="projects.project.reviews.create" class="btn-review  btn-details-container btn btn-default"> create</button>
+                        </div>
+                    </div>
+                    <ul class="list-group" style="">
+                        <li class="list-group-item pointer"
+                            ng-repeat="each_review in reviews | filter:search | event: project.date: project.nextdate as reviews"
+                            ng-class="{active: review.id === each_review.id}"
+                            ui-sref="projects.project.reviews.edit({'review_id': each_review.id})">
 
                        <span class="pull-right">
-                            <a ng-if="review.messages.length !== 0"  class="fa-stack fa-2x">
-                                <i ng-class="{'review-active': review.id === each_review.id, 'review-inactive': review.id !== each_review.id}" class="fa fa-comment fa-stack-1x"></i>
+                            <a ng-if="review.messages.length !== 0" class="fa-stack fa-2x">
+                                <i ng-class="{'review-active': review.id === each_review.id, 'review-inactive': review.id !== each_review.id}"
+                                   class="fa fa-comment fa-stack-1x"></i>
                                 <i style='font-size: 13px;line-height: 0;font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;font-weight: bold'
                                    class="fa fa-stack-1x fa-inverse">4</i>
-                             </a>
+                            </a>
                         </span>
-                        {{each_review.title}}
+                            {{each_review.title}}
 
-                        <span >
+                        <span>
                             {{(each_review.messages[(each_review.messages.length -1)].date)}}
                         </span>
-                    </li>
-                </ul>
-            </div>
+                        </li>
+                    </ul>
+                </div>
 
-        </div>
-        <div class="col-xs-8" stylex="margin-left: 10px;">
-            <div ui-view></div>
+            </div>
+            <div class="col-xs-8" stylex="margin-left: 10px;">
+                <div ui-view></div>
+            </div>
         </div>
     </div>
 </div>
-  </div>
