--- a/website/app/application/core/projects/project/samples/samples.html
+++ b/website/app/application/core/projects/project/samples/samples.html
@@ -4,22 +4,39 @@
             <div class="col-sm-12">
                 <a class="pull-right" ng-click="ctrl.chooseTemplate()">Create New Sample</a>
             </div>
-        </div><br>
+        </div>
+        <br>
+
         <div class="row">
             <div class="col-sm-12">
-                <a class="pull-right text-muted padding-left-15">Samples</a>
-                <a class="pull-right text-muted padding-left-15">Processes</a>
-                <a class="pull-right ">All</a>
+                <a class="pull-right padding-left-15"
+                   ng-class="{'text-muted': ctrl.filterBy !== 'samples'}"
+                   ng-click="ctrl.filterBy = 'samples'">
+                    Samples
+                </a>
+                <a class="pull-right padding-left-15"
+                   ng-class="{'text-muted': ctrl.filterBy !== 'processes'}"
+                   ng-click="ctrl.filterBy = 'processes'">
+                    Processes
+                </a>
+                <a class="pull-right"
+                   ng-class="{'text-muted': ctrl.filterBy !== 'all'}"
+                   ng-click="ctrl.filterBy = 'all'">
+                    All
+                </a>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-12">
-                <input placeholder="Search all..." class="form-control" ng-model="search">
+                <input placeholder="Search all..."
+                       class="form-control"
+                       ng-model="ctrl.searchText"
+                       ng-model-options="{ updateOn: 'default blur', debounce: { default: 200, blur: 0} }">
             </div>
         </div>
         <ul ng-if="ctrl.samples.length !== 0" class="list-group">
             <li class="list-group-item pointer no-padding no-position"
-                ng-repeat="s in ctrl.samples"
+                ng-repeat="s in ctrl.samples | orderBy: 'name' | filter:ctrl.sampleFilter"
                 ng-class="{active: ctrl.current.id === s.id}"
                 ng-click="ctrl.viewSample(s)">
                 <p class="heading">{{s.name}}</p>
@@ -27,9 +44,9 @@
                 <div class="text-muted truncate-text">{{s.description}}</div>
                 <div class="row counts">
                     <span><i data-placement="right" data-toggle="tooltip" title="Transformations"
-                             class="fa fa-fw fa-flask" style="color: #ff5a60;"></i>{{s.property_sets.length - 1}}</span>
+                             class="fa fa-fw fa-flask" style="color: #ff5a60;"></i>{{s.transforms}}</span>
                     <span class="padding-left-15"><i data-placement="right" data-toggle="tooltip" title="Files"
-                                                     class="fa fa-fw fa-files-o file"></i>{{s.linked_files.length}}  </span>
+                                                     class="fa fa-fw fa-files-o file"></i>{{s.files.length}}  </span>
                     <span class="padding-left-15"><composition properties="s.properties"></composition></span>
                     <span class="pull-right"><i data-placement="right" data-toggle="tooltip" title="Owner"
                                                 class="fa fa-fw fa-user"></i>{{s.owner}}</span>
