--- a/website/app/index.html
+++ b/website/app/index.html
@@ -136,6 +136,7 @@
 <script src="application/core/projects/project/samples/view-measurements-controller.js"></script>
 <script src="application/core/projects/project/samples/measurements-tab-directive.js"></script>
 <script src="application/core/projects/project/samples/composition-directive.js"></script>
+<script src="application/core/projects/project/samples/filter-sample-service.js"></script>
 <script src="application/core/projects/project/processes/process-list-controller.js"></script>
 <script src="application/core/projects/project/processes/line-graph-controller.js"></script>
 <script src="application/core/projects/project/processes/histogram-controller.js"></script>
